# beacon

./: .gitignore  LICENSE  README.md  pyproject.toml
beacon/core/: app.py
beacon/mqtt/: client.py
beacon/utils/: logging_config.py
scripts/: mqtt_test.py
