[project]
name = "beacon"
version = "0.1.0"
description = ""
authors = [
    {name = "rubiokittsrey",email = "kittsreyrubio@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "black (>=26.1.0,<27.0.0)"
]

[tool.black]
line-length = 100
target-version = ["py312"]
skip-string-normalization = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
fix = true

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"