[project]
name = "beacon"
version = "0.1.0"
description = ""
authors = [
    {name = "rubiokittsrey",email = "kittsreyrubio@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["paho-mqtt (>=2.1.0,<3.0.0)", "aiohttp (>=3.13.3,<4.0.0)", "aiosqlite (>=0.22.1,<0.23.0)", "pydantic (>=2.12.5,<3.0.0)", "pydantic-settings (>=2.12.0,<3.0.0)", "pyyaml (>=6.0.3,<7.0.0)", "psutil (>=7.2.2,<8.0.0)", "click (>=8.3.1,<9.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["pytest (>=9.0.2,<10.0.0)", "pytest-asyncio (>=1.3.0,<2.0.0)", "pytest-cov (>=7.0.0,<8.0.0)", "mypy (>=1.19.1,<2.0.0)", "ruff (>=0.15.0,<0.16.0)", "sphinx (>=9.1.0,<10.0.0)", "pre-commit (>=4.5.1,<5.0.0)", "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)"]

[tool.ruff]
target-version = "py313"

line-length = 100
fix = true

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Files to include
extend-include = ["*.pyw"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (Python version upgrades)
    "YTT",    # flake8-2020 (misuse of sys.version)
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "BLE",    # flake8-blind-except
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "INT",    # flake8-gettext
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "TD",     # flake8-todos
    "FIX",    # flake8-fixme
    "ERA",    # eradicate (commented-out code)
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # Pylint
    "TRY",    # tryceratops
    "FLY",    # flynt (string formatting)
    "NPY",    # NumPy-specific rules
    "AIR",    # Airflow
    "PERF",   # Perflint (performance anti-patterns)
    "FURB",   # refurb (modernization)
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",    # Line too long (handled by formatter)
    "S101",    # Use of assert detected (needed for tests)
    "S104",    # Possible binding to all interfaces
    "S108",    # Probable insecure usage of temp file/directory
    "PLR0913", # Too many arguments to function call
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link in TODO
    "FIX002",  # Line contains TODO
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in specific files/directories
"__init__.py" = ["F401", "F403"]  # Unused imports, wildcard imports
"tests/**/*.py" = [
    "S101",    # Use of assert
    "PLR2004", # Magic value used in comparison
    "ARG001",  # Unused function argument
    "ARG002",  # Unused method argument
]
"conftest.py" = ["ARG001"]  # Unused function argument (fixtures)

[tool.ruff.lint.isort]
# Configure import sorting
known-first-party = ["beacon"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity
max-complexity = 10

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings
convention = "google"

[tool.ruff.lint.pylint]
# Maximum number of arguments for a function
max-args = 8
# Maximum number of branches in a function
max-branches = 15
# Maximum number of statements in a function
max-statements = 60

[tool.ruff.lint.flake8-annotations]
# Allow dynamically typed expressions in functions
allow-star-arg-any = true
# Suppress errors for functions that return Any
suppress-dummy-args = true

[tool.ruff.lint.flake8-bugbear]
# Allow default arguments like mutable objects in functions
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
# Allowed names that shadow Python builtins
builtins-ignorelist = ["id", "type", "filter", "format"]

[tool.ruff.lint.flake8-pytest-style]
# Configure pytest style preferences
fixture-parentheses = true
mark-parentheses = true

[tool.ruff.lint.flake8-quotes]
# Prefer double quotes
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.flake8-tidy-imports]
# Ban certain imports
ban-relative-imports = "all"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces, not tabs
indent-style = "space"

# Use `\n` line endings for all files
line-ending = "lf"

# Enable auto-formatting of code examples in docstrings
docstring-code-format = true

# Set the line length limit used when formatting code snippets in docstrings
docstring-code-line-length = 72
